--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -53,3 +53,24 @@ p {
 .light-gray {
   color: $colors-text--secondary;
 }
+
+@media screen and (max-width: 576px) {
+  h1, h2 {
+    font-size: rem(20);
+    font-weight: 800;
+    line-height: 1.4;
+    letter-spacing: 0.4px;
+  }
+
+  .subtitle {
+    font-size: rem(12);
+    line-height: 2;
+    letter-spacing: 0.2px;
+  }
+
+  p {
+    font-size: rem(12);
+    line-height: rem(20);
+    letter-spacing: 0.2px;
+  }
+}
