finish reviews component mobile

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -62,6 +62,11 @@ p {
     letter-spacing: 0.4px;
   }
 
+  h3 {
+    font-size: rem(16);
+    letter-spacing: 0.3px;
+  }
+
   .subtitle {
     font-size: rem(12);
     line-height: 2;
